# lichess_suicide

./: .gitignore  LICENSE  README.md  Vagrantfile  main.py  setup.cfg
src/lichess-suicide/: analysis.py
