[metadata]
name = lichess_suicide
version = 0.0.1
author = Christian Hagenest + SESU Gang
author_email = c.hagenest@pm.me
description = Deleting your system if you blunder on lichess
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.0x90.space/vmann/basicpy
project_urls =
    Bug Tracker = https://git.0x90.space/vmann/basicpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    python-lichess

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lichess_suicide = lichess_suicide:main

[tox:tox]
envlist = lint, py310
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
    flake8
    mypy
commands =
    black --check --diff src tests
    flake8 src tests
    mypy --disallow-untyped-defs src tests

[testenv]
deps =
    pytest
commands =
    pytest tests

[flake8]
max_line_length = 88
